[metadata]
name = canswim
version = 0.0.1
author = Ivelin Ivanov
author_email = ivelin117@gmail.com
description = Develper toolit for IBD CANSLIM style investors
long_description = file: README.md, LICENSE.txt
keywords = one, two
license = Apache-2.0
classifiers =
    # Framework :: Django
    Programming Language :: Python :: 3
project_urls =
	# Documentation = https://setuptools.pypa.io/
	# Changelog = https://setuptools.pypa.io/en/stable/history.html    

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    lightning
    darts
    yfinance
    fmpsdk
    optuna
    # requests
    # importlib-metadata; python_version<"3.8"


[options.package_data]
* = *.txt, *.rst
# hello = *.msg

[options.entry_points]
# console_scripts =
#    executable-name = my_package.module:function

[options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    data*
    canswim.tests*
    tests*
