[metadata]
name = canswim
version = 0.0.15
author = Ivelin Ivanov
author_email = ivelin117@gmail.com
description = "Developer toolkit for CANSLIM investment style practitioners"
long_description = file: README.md
keywords = stock market, analytics
license = Apache-2.0
classifiers =
    # Framework :: Django
    Programming Language :: Python :: 3
project_urls =
	# Documentation = https://setuptools.pypa.io/
	# Changelog = https://setuptools.pypa.io/en/stable/history.html

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    darts[torch]==0.27.2
    yfinance[nospam]
    pandas_market_calendars
    fmpsdk
    optuna==3.4.0
    huggingface_hub
    gradio
    loguru
    duckdb
    # hvplot
    # requests
    # importlib-metadata; python_version<"3.8"
    pytest
    pytest-cov


[options.package_data]
* = *.txt, *.rst, *.md
# hello = *.msg

[options.entry_points]
# console_scripts =
#    executable-name = my_package.module:function

[options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    data*
    canswim.tests*
    tests*
