[metadata]
name = canswim
version = 0.0.20260716
author = Ivelin Ivanov
author_email = ivelin117@gmail.com
description = Developer toolkit for CANSLIM-style investors (CLI, Gradio GUI, MCP)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = stock market, analytics, CANSLIM, forecast, MCP
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business :: Financial :: Investment
project_urls =
    Homepage = https://github.com/ivelin/canswim
    Documentation = https://ivelin.github.io/canswim/
    Changelog = https://github.com/ivelin/canswim/blob/main/CHANGELOG.md
    Issues = https://github.com/ivelin/canswim/issues

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.10
install_requires =
    u8darts[torch]==0.27.2
    numpy<2
    yfinance[nospam]>=0.2.40
    pandas_market_calendars
    fmpsdk>=20250102.0
    optuna==3.4.0
    huggingface_hub
    gradio
    loguru
    duckdb
    mcp>=1.2,<2
    python-dotenv
    requests-ratelimiter>=0.6,<1

[options.package_data]
* = *.txt, *.rst, *.md

[options.entry_points]
console_scripts =
    canswim-mcp = canswim.mcp.server:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    mkdocs-material
    build
    twine

[options.packages.find]
where=src
exclude =
    examples*
    tools*
    docs*
    data*
    canswim.tests*
    tests*
